# cleu-orm

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml
cleu-orm/: Cargo.toml
cleu-orm-derive/: Cargo.toml
cleu-orm-derive/src/: lib.rs  utils.rs
cleu-orm-derive/tests/: tests.rs
cleu-orm-derive/tests/fail/: non-named-fiels.rs  non-named-fiels.stderr
cleu-orm-derive/tests/pass/: accepts-custom-error.rs  derive-implements-expected-structures.rs  table-group-changes-table-definitions.rs
cleu-orm/src/: association.rs  associations.rs  buffer.rs  crud.rs  error.rs  field.rs  fields.rs  from_rows_suffix.rs  full_association.rs  full_table_association.rs  fx_hasher.rs  lib.rs  limit.rs  no_association.rs  no_table_association.rs  no_table_entity.rs  no_table_field.rs  order_by.rs  source_association.rs  sql_value.rs  sql_writer.rs  table.rs  table_association.rs  table_association_wrapper.rs  table_associations.rs  table_defs.rs  table_field.rs  table_fields.rs  table_params.rs  tests.rs  to_field_values.rs  tuple_impls.rs  utils.rs
cleu-orm/src/crud/: utils.rs
cleu-orm/src/sql_writer/: write_delete.rs  write_insert.rs  write_select.rs  write_update.rs
cleu-orm/src/tests/: collection.rs  diamond.rs  diamond_associations.rs  generic.rs
scripts/: publish.sh  tests.sh
