[dependencies]
proc-macro2 = { default-features = false, version = "1.0" }
quote = { default-features = false, version = "1.0" }
syn = { default-features = false, features = ["derive", "parsing", "printing", "proc-macro"], version = "1.0" }

[dev-dependencies]
cleu-orm = { default-features = false, path = "../cleu-orm" }
trybuild = { default-features = false, version = "1.0" }

[features]
default = []

[lib]
proc-macro = true

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["database"]
description = "Object–relational mapping"
edition = "2021"
keywords = ["database", "orm", "sql"]
license = "Apache-2.0"
name = "cleu-orm-derive"
version = "0.1.0"
