[dependencies]
cl-traits = { default-features = false, features = ["alloc"], git = "https://github.com/c410-f3r/cl-traits", version = "6.0" }
async-trait = { default-features = false, version = "0.1" }
cleu-orm-derive = { default-features = false, optional = true, path = "../cleu-orm-derive", version = "0.1.0" }
sqlx-core = { default-features = false, features = ["postgres", "runtime-tokio-native-tls"], version = "0.5" }

[features]
default = []
derive = ["cleu-orm-derive"]
with-arrayvec = ["cl-traits/with-arrayvec"]

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["database"]
description = "Object–relational mapping"
edition = "2021"
keywords = ["database", "orm", "sql"]
license = "Apache-2.0"
name = "cleu-orm"
version = "0.1.0"
