[dependencies]
arrayvec = { default-features = false, optional = true, version = "0.7" }
async-trait = { default-features = false, version = "0.1" }
cl-traits = { default-features = false, features = ["alloc", "gat"], git = "https://github.com/c410-f3r/cl-traits", version = "6.0" }
cleu-orm-derive = { default-features = false, optional = true, path = "../cleu-orm-derive", version = "0.1.0" }
rust_decimal = { default-features = false, optional = true, version = "1.0" }
sqlx-core = { default-features = false, optional = true, version = "0.5" }

[features]
arrayvec = ["dep:arrayvec"]
default = []
derive = ["dep:cleu-orm-derive"]
rust_decimal = ["dep:rust_decimal"]
sqlx-postgres = ["dep:sqlx-core", "sqlx-core?/postgres"]
sqlx-runtime-tokio-native-tls = ["dep:sqlx-core", "sqlx-core?/runtime-tokio-rustls"]

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["database"]
description = "Object–relational mapping"
edition = "2021"
keywords = ["database", "orm", "sql"]
license = "Apache-2.0"
name = "cleu-orm"
repository = "https://github.com/c410-f3r/cleu-orm"
version = "0.1.0"